client/style.css
.feed-content {
    font-size: 15px !important;
    color: #475e75;
}

.feed-image {
    width: 33%;
    flex-shrink: 0;
    max-height: 200px;
    object-fit: cover;
    border-radius: 4px;
    align-self: flex-start;
}

.feed-text {
    flex: 1;
    min-width: 0;
}

.google-button {
    background-color: #eaa623;
    color: white;
    border-radius: 5px;
    padding: 10px 20px;
    text-decoration: none;
    font-size: 16px;
    text-shadow: 0 0px !important;
    width: 80px;
    height: 15px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.sticky-navbar {
    position: sticky;
    top: 0;
    z-index: 1000;
    margin-bottom: 5px;
    --sapShellColor: linear-gradient(to bottom, #f8f9fa, #e9ecef);
    --sapShell_Hover_Background: transparent;
    --_ui5-v2-1-0_shellbar_button_focused_border: 0px transparent none;
}

.cards {
    --_ui5-v2-1-0_card_border-radius: 0px 0px 2px 2px;
    --_ui5-v2-1-0_card_header_focus_border: 0px;
    --sapContent_FocusWidth: 0px;
    --sapContent_FocusStyle: none;
}

.signup-button {
    background-color: #6c757d !important; /* A dark grey color */
}

@media (max-width: 767px) {
  .main-content {
    padding: 0 8px;
  }
}

@media (min-width: 768px) {
  .app-container {
    background-color: #e1e1e1;
    min-height: 100vh;
  }
  .main-content {
    margin: 0 auto;
    max-width: 50%;
  }
  
  /* Force Select to use popover instead of dialog on desktop */
  ui5-select#summary-language-cmb {
    --_ui5_input_width: 100%;
  }
}

